prevent scroll bar visible

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,7 @@
 .AppTutorialOverlay {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  height: 100vh;
 }
 .AppTutorialOverlay > * {
   height: 100%;
