--- a/src/components/LongTapper.css
+++ b/src/components/LongTapper.css
@@ -1,2 +1,8 @@
 .LongTapper {
 }
+.LongTapper.-containing {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
